Settings Done, filtering&Highlighting added
Settings is now complete, preferences are saved to a local database.
Filtering is done, so is Highlighting. Seperated all converters from one
class to diffrent classes for clarities sake

--- a/WP/Hydra/App.xaml
+++ b/WP/Hydra/App.xaml
@@ -1,11 +1,10 @@
-﻿<Application 
+<Application 
     x:Class="Hydra.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:converter="clr-namespace:Hydra" >
+    xmlns:convert="clr-namespace:Hydra.Converters">
 
     <!--Application Resources-->
     <Application.Resources>
@@ -26,11 +25,24 @@
             <Setter Property="FontWeight" Value="Normal" />
         </Style>
 
+        <Style x:Name="HighLighted" TargetType="TextBlock">
+            <Setter Property="Style" Value="{StaticResource PhoneTextTitle2Style}" />
+            <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeLarge}" />
+            <Setter Property="Foreground" Value="Chocolate" />
+        </Style>
+        <Style x:Name="NormalNotHighLighted" TargetType="TextBlock">
+            <Setter Property="Style" Value="{StaticResource PhoneTextTitle2Style}" />
+            <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeLarge}" />
+        </Style>
 
-        <converter:BooleanToVisibilityConverter x:Key="boolean" />
+
+        <convert:BooleanToStyleConverter x:Key="booleanToStyle" />
+        <convert:BooleanToStringConverter x:Key="booleanToString" />
+        <convert:StringToBooleanConverter x:Key="stringToBoolean" />
+        <convert:ObjectToVisibilityConverter x:Key="objectToVisbility" />
+        <convert:ObjectToStyleConverter x:Key="objectToStyle" />
         
         <local:LocalizedStrings xmlns:local="clr-namespace:Hydra" x:Key="LocalizedStrings"/>
-        <ImageBrush x:Key="MainBackground" ImageSource="/Assets/hydraBackGround.png" />
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
