--- a/WP/Hydra/Pages/ActivityItem.xaml
+++ b/WP/Hydra/Pages/ActivityItem.xaml
@@ -1,5 +1,5 @@
-﻿<phone:PhoneApplicationPage
-    x:Class="Hydra.ActivityItem"
+<phone:PhoneApplicationPage
+    x:Class="Hydra.Pages.ActivityItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
