--- a/WP/Hydra/Pages/InfoItemBrowser.xaml
+++ b/WP/Hydra/Pages/InfoItemBrowser.xaml
@@ -1,5 +1,5 @@
-﻿<phone:PhoneApplicationPage
-    x:Class="Hydra.SchamperItem"
+<phone:PhoneApplicationPage
+    x:Class="Hydra.Pages.InfoItemBrowser"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -13,7 +13,6 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="False">
-
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
@@ -42,21 +41,13 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-
-        <!--ContentPanel - place additional content here-->
+        <StackPanel Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock Name="title" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Grid Margin="10,10,10,639">
-                
-                <Image HorizontalAlignment="Left" Height="119" VerticalAlignment="Top" Width="133" Source="/Assets/schamper-bg.png"/>
-                <Image HorizontalAlignment="Left" Height="119" VerticalAlignment="Top" Width="133" Margin="118,0,0,0" Source="/Assets/schamper-bg.png"/>
-                <Image HorizontalAlignment="Left" Height="119" VerticalAlignment="Top" Width="133" Margin="318,0,0,0" Source="/Assets/schamper-bg.png"/>
-                <Image HorizontalAlignment="Left" Height="119" VerticalAlignment="Top" Width="133" Margin="234,0,0,0" Source="/Assets/schamper-bg.png"/>
-                <TextBlock Name="title" Text="page name" TextWrapping="Wrap"  Margin="10,10,10,37" />
-                <TextBlock Name="author" HorizontalAlignment="Left" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Margin="10,82,0,0" Width="416"/>
-            </Grid>
-            <phone:WebBrowser Name="browser" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,134,0,0" Height="624" Width="436"/>
+            <phone:WebBrowser x:Name="browser" HorizontalAlignment="Left" VerticalAlignment="Top" Height="624" Width="446"/>
 
         </Grid>
     </Grid>
