--- a/WP/Hydra/Pages/RestoLocations.xaml
+++ b/WP/Hydra/Pages/RestoLocations.xaml
@@ -1,12 +1,13 @@
-﻿<phone:PhoneApplicationPage
-    x:Class="Hydra.NewsItem"
+<phone:PhoneApplicationPage
+    x:Class="Hydra.Pages.RestoLocations"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -34,7 +35,6 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-    
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -43,24 +43,25 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-
-        <!--ContentPanel - place additional content here-->
-        <Border Grid.Row="0" Margin="12,17,0,28">
-    		<Grid>
-                <TextBlock x:Name="title" Margin="9,-7,0,-32"  TextWrapping="Wrap" Style="{StaticResource PhoneTextTitle2Style}" Text="{Binding FullTitle}"/>
-                <TextBlock x:Name="associatie" TextWrapping="Wrap" Text="{Binding Assocition.Dn}" Margin="9,73,284,-64"/>
-    			<TextBlock x:Name="date" Text="{Binding Date}" Margin="293,73,0,-64"/>
-    		</Grid>
-    	</Border>
+        <StackPanel Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock Text="Resto locaties" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="31*"/>
-                <ColumnDefinition Width="26*"/>
-            </Grid.ColumnDefinitions>
-            <phone:WebBrowser x:Name="browser"  HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" Height="633" Width="436" Grid.ColumnSpan="2"/>
+            <phone:LongListSelector x:Name="restoLLLS" HorizontalAlignment="Left" Height="646" Margin="10,10,0,0" VerticalAlignment="Top" Width="436" ItemsSource="{Binding Locations}"  SelectionChanged="RestoLocationTapped">
 
+                <phone:LongListSelector.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="12,2,0,4" Height="105" Width="432">
+                            <StackPanel Width="311" Margin="8,-7,0,0">
+                                <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Margin="10,0" Style="{StaticResource PhoneTextTitle2Style}" FontSize="{StaticResource PhoneFontSizeLarge}" />
+                                <TextBlock Text="{Binding Address}" TextWrapping="Wrap" Margin="10,-2,10,0" />
+                            </StackPanel>
+                        </StackPanel>
+                    </DataTemplate>
+                </phone:LongListSelector.ItemTemplate>
+            </phone:LongListSelector>
         </Grid>
     </Grid>
 
