--- a/android/res/values/analytics.xml
+++ b/android/res/values/analytics.xml
@@ -20,6 +20,7 @@
     <string name="be.ugent.zeus.hydra.BuildingMap">Resto Map</string>
     <string name="be.ugent.zeus.hydra.SchamperDaily">Schamper</string>
     <string name="be.ugent.zeus.hydra.Urgent">Urgent</string>
+    <string name="be.ugent.zeus.hydra.Settings">Voorkeuren</string>
     <!--  TODO: Add one for Urgent -->
   
     <!--Enable automatic exception tracking-->
