--- a/android/res/xml/settings.xml
+++ b/android/res/xml/settings.xml
@@ -5,6 +5,7 @@
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="prefFilter"
+            android:disableDependentsState="true"
             android:title="@string/pref_filter_activites" 
             android:summary="@string/pref_filter_activities_summary" />
         
