--- a/android/res/xml/settings.xml
+++ b/android/res/xml/settings.xml
@@ -3,7 +3,7 @@
  
     <PreferenceCategory android:title="@string/pref_filter" >
         <CheckBoxPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="prefFilter"
             android:disableDependentsState="true"
             android:title="@string/pref_filter_activites" 
